force-app/main/default/objects/Sample_Received_Stage__c/Sample_Received_Stage__c.object-meta.xml
<CustomObject>
    <label>Sample Received Stage</label>
    <nameField>
        <displayFormat>Sample-{00000}</displayFormat>
        <label>Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Received Stage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>