force-app/main/default/objects/Sample_Received_Stage__c/fields/Batch_update_date_time__c.field-meta.xml
<CustomField>
    <fullName>Batch_update_date_time__c</fullName>
    <label>Batch update date time</label>
    <type>DateTime</type>
</CustomField>