force-app/main/default/objects/Sample_Received_Stage__c/fields/Biospecimen_Material__c.field-meta.xml
<CustomField>
    <fullName>Biospecimen_Material__c</fullName>
    <label>Biospecimen Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Biospecimen_Material</valueSetName>
    </valueSet>
</CustomField>