force-app/main/default/objects/Sample_Received_Stage__c/fields/Collaboration_Key__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Key__c</fullName>
    <label>Collaboration Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>