force-app/main/default/objects/Sample_Received_Stage__c/fields/Collaboration_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collaboration Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sample Received Stage</relationshipLabel>
    <relationshipName>Sample_Received_Stage</relationshipName>
    <type>Lookup</type>
</CustomField>