force-app/main/default/objects/Sample_Received_Stage__c/fields/Recivied_Date__c.field-meta.xml
<CustomField>
    <fullName>Recivied_Date__c</fullName>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>